Add Control Plane Versioning
Update the server API to have a RMW interface for control planes, add in
APIs for application bundles, add in the application bundle parameter to
both read/create control plane interfaces.
